language/move-compiler/tests/move_check/expansion/use_function_tparam_shadows.exp
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:7:17
  │
7 │     use 0x2::X::foo;
  │                 ^^^ Unused 'use' of alias 'foo'. Consider removing it

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:10:9
   │
10 │         foo()
   │         ^^^ Unbound function 'foo' in current scope

